# glad-glulc2020

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-integration.yml
docker/: Dockerfile  build  cibuild  console  lint  stac  test
docs/: example.ipynb
examples/glad-glclu2020/: collection.json
examples/glad-glclu2020-change/: collection.json
examples/glad-glclu2020-change-v2/: collection.json
examples/glad-glclu2020-change-v2/2000-2020change_40N_080W/: 2000-2020change_40N_080W.json
examples/glad-glclu2020-change-v2/v2_2000-2020change_40N_080W/: v2_2000-2020change_40N_080W.json
examples/glad-glclu2020-change/v2_2000-2020change_40N_080W/: v2_2000-2020change_40N_080W.json
examples/glad-glclu2020-v2/: collection.json
examples/glad-glclu2020-v2/2000_40N_080W/: 2000_40N_080W.json
examples/glad-glclu2020-v2/v2_2000_40N_080W/: v2_2000_40N_080W.json
examples/glad-glclu2020/v2_2000_40N_080W/: v2_2000_40N_080W.json
scripts/: test  update-examples
src/stactools/glad_glclu2020/: __init__.py  commands.py  metadata.py  stac.py
src/stactools/glad_glclu2020/data/: annual_classes.csv  change_classes.csv
tests/: test_commands.py  test_stac.py
tests/data/cog/v2/2000/: 40N_080W.tif
tests/data/cog/v2/2000-2020change/: 40N_080W.tif
tests/data/geotiff/v2/2000/: 40N_080W.tif
tests/data/geotiff/v2/2000-2020change/: 40N_080W.tif
